Added check for TabulaMurisSenisData

--- a/vignettes/cell_type_mapping_with_NNLS.rmd
+++ b/vignettes/cell_type_mapping_with_NNLS.rmd
@@ -12,6 +12,9 @@ editor_options:
 library(STUtility2)
 library(tibble)
 library(dplyr)
+if (!requireNamespace('TabulaMurisSenisData', quietly = TRUE)) {
+  BiocManager::install("TabulaMurisSenisData")
+}
 library(TabulaMurisSenisData)
 library(SingleCellExperiment)
 library(Seurat)
